# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: CI.yml  make.yml
data/shaders/: instance.vert  quad.frag  quad.vert  sky.frag  sky.vert  sun.frag  sun.vert
docs/: class_diagram.puml
headers/: buffer.hpp  enums.hpp  helpers.hpp  program.hpp  quadtree.hpp  shape.hpp  texture.hpp  window.hpp
headers/buffers/: BufferObjects.hpp  EBO.hpp  VBO.hpp  buffers.hpp  helpers.hpp
headers/controllers/: InputController.hpp  MovementController.hpp
headers/models/: Event.hpp  Game.hpp  Player.hpp
headers/player/: camera.hpp  player.hpp
headers/rendering/: mesh.hpp  program.hpp  renderer.hpp  shape.hpp  texture.hpp
headers/utility/: Event.hpp  Log.hpp  enums.hpp  timing.hpp
headers/views/: BufferSet.hpp  RenderingView.hpp  View.hpp
headers/views/renderers/: AsyncRenderer.hpp  InstancingRenderer.hpp  QuadRenderer.hpp  QuadRendererT.hpp  Renderer.hpp  RendererT.hpp
headers/world/: block.hpp  chunk.hpp  chunk_sector.hpp  cube.hpp  player.hpp  quadtree.hpp  world.hpp
include/: window.hpp
include/buffers/: BufferObject.hpp  BufferObjects.hpp  EBO.hpp  VBO.hpp
include/controllers/: Controller.hpp  InputController.hpp  MovementController.hpp
include/models/: Game.hpp  Player.hpp  World.hpp
include/rendering/: Program.hpp  Texture2D.hpp  mesh.hpp  meshes.hpp  program.hpp  textures.hpp
include/utils/: Event.hpp  Log.hpp
include/views/: BufferSet.hpp  RenderingView.hpp  View.hpp  WindowView.hpp
include/views/renderers/: AsyncRenderer.hpp  InstancingRenderer.hpp  QuadRenderer.hpp  Renderer.hpp  SkyBoxRenderer.hpp  SunRenderer.hpp
include/world/: Block.hpp  Chunk.hpp  ChunkSector.hpp  block.hpp  chunk.hpp  chunk_sector.hpp  quadtree.hpp
lib/: glad.c
lib/FastNoiseSIMD/: FastNoiseSIMD.cpp
shaders/: cube2D.frag  cube3D.frag  fragment.fs  quad.frag  vertex.vs
src/: camera.cpp  main.cpp  program.cpp  quadtree.cpp  shape.cpp  texture.cpp  window.cpp
src/buffers/: BufferObjects.cpp  EBO.cpp  buffers.cpp  helpers.cpp
src/controllers/: InputController.cpp  MovementController.cpp
src/models/: Player.cpp  World.cpp
src/player/: camera.cpp  player.cpp
src/rendering/: Program.cpp  Texture2D.cpp  mesh.cpp  meshes.cpp  program.cpp  renderer.cpp  shape.cpp  texture.cpp  textures.cpp
src/utility/: Log.cpp  timing.cpp
src/utils/: Log.cpp  timers.cpp  timing.cpp
src/views/: BufferSet.cpp  RenderingView.cpp  View.cpp  WindowView.cpp
src/views/renderers/: AsyncRenderer.cpp  InstancingRenderer.cpp  QuadRenderer.cpp  QuadRendererT.cpp  Renderer.cpp  RendererT.cpp  SkyBoxRenderer.cpp  SunRenderer.cpp
src/world/: Block.cpp  Chunk.cpp  ChunkSector.cpp  block.cpp  chunk.cpp  chunk_sector.cpp  cube.cpp  player.cpp  quadtree.cpp  world.cpp
textures/: blocks.psd
tools/: generate_uml.sh
